Fix contrast of link color

--- a/_scss/dependencies/_variables.scss
+++ b/_scss/dependencies/_variables.scss
@@ -5,7 +5,7 @@ $white:       #fff;
 $black:       #000;
 
 $beige:       #f1eee9;
-$teal:        #54a4b2;
+$teal:        #30808e;
 $teal-light:  #88c3cd;
 $pink:        #d95648;
 
